@@ -70,6 +70,9 @@
 	Fixed formatting of root directory in custom view, it displayed too many
 	slashes.  Thanks to filterfalse.
 
+	Fixed not recording last visited directory on leaving custom view.  Thanks
+	to filterfalse.
+
 0.9-beta to 0.9
 
 	Escape $ and ` in %" macros on *nix systems.  Thanks to filterfalse.
